fix(css): #MAG-226 fix missing z-index for cards options (#26)

--- a/src/main/resources/public/sass/global/components/directives/_card-list-item-options.scss
+++ b/src/main/resources/public/sass/global/components/directives/_card-list-item-options.scss
@@ -1,5 +1,6 @@
   .cardDirective-list-item-options {
     transform: translateX(5px) translateY(-26px);
+    z-index: 2;
     nav {
       .nav, .sub-nav {
         position: absolute;
